# LowbandPortfolio

./: .env  <F6><F6>  Cargo.toml  Procfile  README.md  app.py  configuration.yaml  dump.rdb  models.py  package-lock.json  package.json  private_key.txt  public_key.txt  requirements.txt  routes.py  server.py
.github/workflows/: general.yml
archive/: app.py  cppy.sh  models.py  routes.py  uwsgi.ini
archive/portfolio-venv/: pyvenv.cfg
client/: dump.rdb  package-lock.json  package.json  rollup.config.js  rollup.config.mjs
client/public/: fractal_wasm.js  fractal_wasm_bg.wasm  index.html
client/src/: App.svelte  Blog.svelte  Chat.svelte  Home.svelte  Post.svelte  Project.svelte  Projects.svelte  Skill.svelte  dump.rdb  global.css
client/src/blog/: Post1.svelte  Post2.svelte  RustIntegration.svelte  index.js
client/src/projects/: 2048_Game.svelte  Audio.svelte  Fractal.svelte  Path_Finding.svelte  Project1.svelte  Project2.svelte  Quiz_Gen.svelte  RSA_Messager.svelte
client/src/skills/: Markdown.svelte  Modal_Editing.svelte  Python.svelte
fractal_wasm/: Cargo.toml
fractal_wasm/src/: lib.rs
migrations/: 20230821144753_create_skill_bio_project_tables.sql
scripts/: init_db.sh
src/: db.rs  fractal.rs  game.rs  lib.rs  main.rs  models.rs  routes.rs  rsa.rs  schema.rs  startup.rs  twentyfortyeight.rs
src/routes/: chat.rs  game.rs  mod.rs  pathfinding.rs  rsa.rs  twentyfortyeight.rs
tests/: health_check.rs
