[package]
name = "lowband_portfolio"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "lowband_portfolio"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session", "redis-rs-session", "redis-actor-session"] }
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "sqlite", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
fast-math = "0.1.1"
lazy_static = "1.4.0"
openai_api_rust = "0.1.8"
rand = "0.8.5"
serde = {version = "^1.0.181", features = ["derive"]}
serde_derive = "^1.0.181"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "sqlite"]}
tokio = { version = "1.29.1", features = ["full"]}
# For rsa:
serde_json = "1.0.96"
num-bigint = {version = "0.4.3", features = ["rand"]}
num-integer = "0.1.45"
num-traits = "0.2.15"
rayon = "1.7.0"
redis = "0.23.2"
tokio-postgres = "0.7.8"



[dev-dependencies]
reqwest = { version = "0.11", features = ["json"]}

